--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,16 +28,19 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+# local depedencies
   core:
     path: core
+  scanner:
+    path: scanner
+  supabase:
+    path: supabase
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
   go_router: ^14.8.0
   google_mlkit_text_recognition: ^0.14.0
   image_picker: ^1.1.2
-  scanner:
-    path: scanner
 
 dev_dependencies:
   flutter_lints: ^5.0.0
