--- a/scanner/pubspec.yaml
+++ b/scanner/pubspec.yaml
@@ -1,6 +1,6 @@
 name: scanner
 description: "A Flutter module project for scan the file and process."
-
+publish_to: none # Remove this line if you wish to publish to pub.dev
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
@@ -21,6 +21,9 @@ environment:
   sdk: ^3.6.2
 
 dependencies:
+# local depedencies
+  core:
+    path: ../core
   flutter:
     sdk: flutter
 
