--- a/scanner/pubspec.yaml
+++ b/scanner/pubspec.yaml
@@ -21,25 +21,28 @@ environment:
   sdk: ^3.6.2
 
 dependencies:
-  flutter:
-    sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   bloc: ^9.0.0
   cupertino_icons: ^1.0.8
-  image_picker: ^1.1.2
-  google_mlkit_text_recognition: ^0.14.0
+  flutter:
+    sdk: flutter
   flutter_bloc: ^9.0.0
+  flutter_slidable: ^4.0.0
+  google_mlkit_text_recognition: ^0.14.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  image_picker: ^1.1.2
+  supabase: ^2.6.2
+  supabase_flutter: ^2.8.3
 
 dev_dependencies:
+  flutter_lints: ^5.0.0
+  build_runner: ^2.4.15
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -51,13 +54,10 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
   # To add Flutter specific custom fonts to your application, add a fonts
   # section here, in this "flutter" section. Each entry in this list should
   # have a "family" key with the font family name, and a "fonts" key with a
@@ -77,8 +77,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
-
-
   # This section identifies your Flutter project as a module meant for
   # embedding in a native host app.  These identifiers should _not_ ordinarily
   # be changed after generation - they are used to ensure that the tooling can
